--- a/webapp/public/stylesheets/dati.css
+++ b/webapp/public/stylesheets/dati.css
@@ -9,7 +9,8 @@ html, body{
     width:100%;
     height:100%;
     background-image: url("../images/bg_new.jpg");
-    background-size: contain;
+    background-size: 100%;
+    overflow: hidden;
     /*background: #130620;*/
     /*background: -moz-linear-gradient(100deg,#130620 0,#56534e 100%);*/
     /*background: -webkit-gradient(linear,left bottom,right top,color-stop(0%,#130620),color-stop(100%,#56534e));*/
